--- a/src/Npgsql.Bulk.DotNetStandard15/Npgsql.Bulk.DotNetStandard15.csproj
+++ b/src/Npgsql.Bulk.DotNetStandard15/Npgsql.Bulk.DotNetStandard15.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>netstandard1.5</TargetFramework>
     <RootNamespace>Npgsql.Bulk</RootNamespace>
     <AssemblyName>Npgsql.Bulk</AssemblyName>
+    <AssemblyVersion>0.5.3.0</AssemblyVersion>
+    <FileVersion>0.5.3.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
