--- a/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
+++ b/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
@@ -65,6 +65,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Address2.cs" />
     <Compile Include="DAL\Address.cs" />
     <Compile Include="DAL\BulkContext.cs" />
     <Compile Include="Program.cs" />
