Implemented BulkSelect extension

--- a/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
+++ b/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
@@ -68,6 +68,7 @@
     <Compile Include="DAL\Address2.cs" />
     <Compile Include="DAL\Address.cs" />
     <Compile Include="DAL\BulkContext.cs" />
+    <Compile Include="DAL\TestDbConfiguration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
