--- a/src/Npgsql.Bulk/Npgsql.Bulk.csproj
+++ b/src/Npgsql.Bulk/Npgsql.Bulk.csproj
@@ -67,6 +67,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BulkMappingSourceAttribute.cs" />
+    <Compile Include="BulkOperationModification.cs" />
+    <Compile Include="BulkOperationModifierAttribute.cs" />
     <Compile Include="BulkQueryableExtension.cs" />
     <Compile Include="BulkSelectInterceptor.cs" />
     <Compile Include="Model\ColumnInfo.cs" />
