--- a/src/Npgsql.Bulk/Npgsql.Bulk.csproj
+++ b/src/Npgsql.Bulk/Npgsql.Bulk.csproj
@@ -73,6 +73,7 @@
     <Compile Include="BulkSelectInterceptor.cs" />
     <Compile Include="Model\ColumnInfo.cs" />
     <Compile Include="Model\EntityInfo.cs" />
+    <Compile Include="Model\TableLockLevel.cs" />
     <Compile Include="Model\UpdateQueryParts.cs" />
     <Compile Include="Model\InsertQueryParts.cs" />
     <Compile Include="Model\MappingInfo.cs" />
