--- a/src/Npgsql.Bulk/Npgsql.Bulk.csproj
+++ b/src/Npgsql.Bulk/Npgsql.Bulk.csproj
@@ -76,6 +76,7 @@
     <Compile Include="BulkOperationModifierAttribute.cs" />
     <Compile Include="BulkQueryableExtension.cs" />
     <Compile Include="BulkSelectInterceptor.cs" />
+    <Compile Include="InsertConflictAction.cs" />
     <Compile Include="Model\ColumnInfo.cs" />
     <Compile Include="Model\EntityInfo.cs" />
     <Compile Include="Model\TableLockLevel.cs" />
