--- a/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
+++ b/src/Npgsql.Bulk.SampleRunner/Npgsql.Bulk.SampleRunner.csproj
@@ -74,6 +74,8 @@
     <Compile Include="DAL\Address.cs" />
     <Compile Include="DAL\AddressType.cs" />
     <Compile Include="DAL\BulkContext.cs" />
+    <Compile Include="DAL\IHasId.cs" />
+    <Compile Include="DAL\IHasId2.cs" />
     <Compile Include="DAL\TestDbConfiguration.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
