--- a/src/Npgsql.Bulk.DotNetStandard20/Npgsql.Bulk.DotNetStandard20.csproj
+++ b/src/Npgsql.Bulk.DotNetStandard20/Npgsql.Bulk.DotNetStandard20.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>Npgsql.Bulk</RootNamespace>
     <AssemblyName>Npgsql.Bulk</AssemblyName>
-    <AssemblyVersion>0.7.4.0</AssemblyVersion>
-    <FileVersion>0.7.4.0</FileVersion>
+    <AssemblyVersion>0.7.5.0</AssemblyVersion>
+    <FileVersion>0.7.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
