--- a/src/Npgsql.Bulk.DotNetStandard21/Npgsql.Bulk.DotNetStandard21.csproj
+++ b/src/Npgsql.Bulk.DotNetStandard21/Npgsql.Bulk.DotNetStandard21.csproj
@@ -8,6 +8,14 @@
     <FileVersion>0.7.6.0</FileVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>TRACE;EFCore</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>TRACE;EFCore</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.6.0" />
