--- a/src/Npgsql.Bulk.DotNetStandard21/Npgsql.Bulk.DotNetStandard21.csproj
+++ b/src/Npgsql.Bulk.DotNetStandard21/Npgsql.Bulk.DotNetStandard21.csproj
@@ -23,11 +23,13 @@
 
   <ItemGroup>
     <Compile Include="..\Npgsql.Bulk.DotNetStandard20\NpgsqlHelper.cs" Link="NpgsqlHelper.cs" />
+    <Compile Include="..\Npgsql.Bulk.DotNetStandard20\RelationalHelper.cs" Link="RelationalHelper.cs" />
     <Compile Include="..\Npgsql.Bulk.DotNetStandard20\ValueHelper.cs" Link="ValueHelper.cs" />
     <Compile Include="..\Npgsql.Bulk\BulkMappingSourceAttribute.cs" Link="BulkMappingSourceAttribute.cs" />
     <Compile Include="..\Npgsql.Bulk\BulkOperationModification.cs" Link="BulkOperationModification.cs" />
     <Compile Include="..\Npgsql.Bulk\BulkOperationModifierAttribute.cs" Link="BulkOperationModifierAttribute.cs" />
     <Compile Include="..\Npgsql.Bulk\InsertConflictAction.cs" Link="InsertConflictAction.cs" />
+    <Compile Include="..\Npgsql.Bulk\IRelationalHelper.cs" Link="IRelationalHelper.cs" />
     <Compile Include="..\Npgsql.Bulk\Model\ColumnInfo.cs" Link="Model\ColumnInfo.cs" />
     <Compile Include="..\Npgsql.Bulk\Model\EntityInfo.cs" Link="Model\EntityInfo.cs" />
     <Compile Include="..\Npgsql.Bulk\Model\InsertQueryParts.cs" Link="Model\InsertQueryParts.cs" />
