--- a/src/Npgsql.Bulk.IntegrationTests.DotNetStandard20/Npgsql.Bulk.IntegrationTests.DotNetStandard20.csproj
+++ b/src/Npgsql.Bulk.IntegrationTests.DotNetStandard20/Npgsql.Bulk.IntegrationTests.DotNetStandard20.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="5.6.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.6" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="xunit" Version="2.4.0" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
