--- a/src/Npgsql.Bulk.SampleRunner.DotNetStandard21/Npgsql.Bulk.SampleRunner.DotNetStandard21.csproj
+++ b/src/Npgsql.Bulk.SampleRunner.DotNetStandard21/Npgsql.Bulk.SampleRunner.DotNetStandard21.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.0.1" />
   </ItemGroup>
 
