--- a/src/Npgsql.Bulk.DotNet5/Npgsql.Bulk.DotNet5.csproj
+++ b/src/Npgsql.Bulk.DotNet5/Npgsql.Bulk.DotNet5.csproj
@@ -17,7 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0-rc2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
     <PackageReference Include="System.Reflection.Emit" Version="4.7.0" />
   </ItemGroup>
 
